--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -6,9 +6,9 @@
   border: 2px solid #eee;
   text-align: center;
 };
-/* 
+
 @media (min-width: 500px) {
   .Person {
     width: 450px;
   }
-} */
+};
