--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,27 @@
 
 .bold {
   font-weight: bold;
-};
+}
 
-.button {
+.App button {
   background-color: green;
   color: white;
   font: inherit;
   border: 2px solid #ccc;
   padding: 8px;
   cursor: pointer;
-};
+}
 
 
-.button:hover {
+.App button:hover {
   background-color: lightgreen;
-  color: black
-};
+  color: black;
+}
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+}
